--- a/stylesheet.css
+++ b/stylesheet.css
@@ -18,7 +18,6 @@ a {
 }
 
 #header {
-	background-color: #444;
 	grid-area: nav;
 }
 
@@ -103,10 +102,10 @@ th {
 }
 
 .header-table {
-	border: white;
+	border-color: white;
 	width: auto;
 }
 
 .header-table > td, th {
-	border: pink;
+	border-color: pink;
 }	
