--- a/stylesheet.css
+++ b/stylesheet.css
@@ -2,7 +2,7 @@
 @import "https://cdn.jsdelivr.net/gh/asciidoctor/asciidoctor@2.0/data/stylesheets/asciidoctor-default.css";
 
 body {
-	font-family: "trade-gothic";
+	font-family: 'trade gothic', sans-serif;
 	line-height: 1.5;
 	padding: 0;
 	margin: 0;
