--- a/themes/stylesheet.css
+++ b/themes/stylesheet.css
@@ -40,11 +40,24 @@ h4 {
 	font-size: 15pt;
 }
 
+#toc {
+	background-color: #000000;
+	opacity: 0.4;
+}
+
 #toctitle {
 	font-family: 'trade gothic';
 	font-weight: bold;
 	color: #000000;
 	font-size: 24pt;
+	line-height: 14pt;
+	border-bottom: 3pt, solid, black;
+}
+
+#sectlevel1 {
+	font-family: 'trade gothic';
+	font-weight: bold;
+	color: #000000;
 }
 
 #subtitle-header {
