--- a/themes/stylesheet.css
+++ b/themes/stylesheet.css
@@ -15,7 +15,7 @@ a {
 	cursor: pointer;
 }
 
-a ::before {
+a ::after {
 	border: solid black;
 	border-width: 0 3 px 3px 0;
 	display: inline-block;
@@ -109,4 +109,8 @@ td, th {
 th {
 	background-color: #f9f9f9;
 	text-align: left;
+}
+
+ul {
+	border: 3pt solid black
 }
