--- a/themes/stylesheet.css
+++ b/themes/stylesheet.css
@@ -45,9 +45,9 @@ h1 .header-title {
 }
 
 .img-logo {
-	position: relative; 
-	right: -24px;
-	top: -24px;
+	position: absolute; 
+	right: 40px;
+	top: 40px;
 }
 
 h2 {
