--- a/themes/stylesheet.css
+++ b/themes/stylesheet.css
@@ -8,15 +8,20 @@ body {
 	margin: 0;
 }
 
-li > a {
+header {
+	height: 128px;
+}
+
+li a {
 	font-family: 'trade gothic';
 	font-size: 12pt;
 	color: black;
 	cursor: pointer;
 }
 
-a ~ li:hover {
-	background-color: #D9D9D9;
+li a:hover {
+	/*background-color: #D9D9D9;*/
+	background-color: #666666;
 }
 
 a ::after {
@@ -57,7 +62,7 @@ h2 {
 	font-size: 24pt;
 }
 
-a ~ h3 {
+h3 {
 	font-family: 'trade gothic';
 	font-weight: bold;
 	color: #000000;
