--- a/themes/stylesheet.css
+++ b/themes/stylesheet.css
@@ -19,9 +19,9 @@ li a {
 	cursor: pointer;
 }
 
-li a:hover {
-	/*background-color: #D9D9D9;*/
-	background-color: #666666;
+li:hover {
+	background-color: #D9D9D9;
+	text-indent: initial;
 }
 
 a ::after {
@@ -50,12 +50,12 @@ h1 .header-title {
 }
 
 .img-logo {
-	position: fixed; 
-	right: 40px;
-	top: 40px;
+	position: relative; 
+	right: -40px;
+	top: -128px;
 }
 
-h2 {
+h2 a {
 	font-family: 'trade gothic';
 	font-weight: bold;
 	color: #000000;
