--- a/themes/stylesheet.css
+++ b/themes/stylesheet.css
@@ -49,11 +49,10 @@ h1 .header-title {
 	color: #000000;
 }
 
-img.img-logo {
+img[alt="logo kt sz rgb"] {
 	position: relative; 
 	left: calc(100%-200px);
 	top: -128px;
-	border: 4px solid purple;
 }
 
 h2 a {
