--- a/themes/stylesheet.css
+++ b/themes/stylesheet.css
@@ -17,11 +17,15 @@ li a {
 	font-size: 12pt;
 	color: black;
 	cursor: pointer;
+	text-indent: initial;
 }
 
-li a:hover {
+ul.seclevel2 li:hover {
 	background-color: #D9D9D9;
-	text-indent: initial;
+}
+
+ul.seclevel1 + li:hover {
+	background-color: #D9D9D9;
 }
 
 a:after {
@@ -56,7 +60,7 @@ img[alt="logo kt sz rgb"] {
 }
 
 p.img-logo {
-	height: 0px;
+	visibility: hidden;
 }
 
 h2 a {
