--- a/themes/stylesheet.css
+++ b/themes/stylesheet.css
@@ -20,11 +20,11 @@ li a {
 	text-indent: initial;
 }
 
-ul.seclevel2 li:hover {
+li + a:hover {
 	background-color: #D9D9D9;
 }
 
-ul.seclevel1 + li:hover {
+ul.seclevel2:hover {
 	background-color: #D9D9D9;
 }
 
@@ -59,11 +59,11 @@ img[alt="logo kt sz rgb"] {
 	top: -200px;
 }
 
-p.img-logo {
+.img-logo {
 	visibility: hidden;
 }
 
-h2 a {
+h2 > a {
 	font-family: 'trade gothic';
 	font-weight: bold;
 	color: #000000;
