--- a/themes/stylesheet.css
+++ b/themes/stylesheet.css
@@ -17,15 +17,11 @@ li a {
 	font-size: 12pt;
 	color: black;
 	cursor: pointer;
+}
+
+li a:hover {
+	background-color: #D9D9D9;
 	text-indent: initial;
-}
-
-li + a:hover {
-	background-color: #D9D9D9;
-}
-
-ul.seclevel2:hover {
-	background-color: #D9D9D9;
 }
 
 a:after {
@@ -55,15 +51,11 @@ h1 .header-title {
 
 img[alt="logo kt sz rgb"] {
 	position: relative; 
-	left: calc(100% - 40px);
+	left: calc(100% - 200px);
 	top: -200px;
 }
 
-.img-logo {
-	visibility: hidden;
-}
-
-h2 > a {
+h2 a {
 	font-family: 'trade gothic';
 	font-weight: bold;
 	color: #000000;
