--- a/themes/stylesheet.css
+++ b/themes/stylesheet.css
@@ -33,7 +33,7 @@ a:after {
 	-webkit-transform: rotate(-45deg);
 }
 
-h1 .header-title {
+h1 {
 	font-family: 'trade gothic';
 	font-weight: bold;
 	font-size: 36pt;
@@ -55,7 +55,7 @@ img[alt="logo kt sz rgb"] {
 	top: -200px;
 }
 
-a.link {
+h2 a.link {
 	font-family: 'trade gothic';
 	font-weight: bold;
 	color: #000000;
