--- a/themes/stylesheet.css
+++ b/themes/stylesheet.css
@@ -33,7 +33,7 @@ a:after {
 	-webkit-transform: rotate(-45deg);
 }
 
-h1 {
+h1 a.link {
 	font-family: 'trade gothic';
 	font-weight: bold;
 	font-size: 36pt;
@@ -62,14 +62,14 @@ h2 a.link {
 	font-size: 24pt;
 }
 
-h3 {
+h3 a.link {
 	font-family: 'trade gothic';
 	font-weight: bold;
 	color: #000000;
 	font-size: 18pt;
 }
 
-h4 {
+h4 a.link{
 	font-family: 'trade gothic';
 	font-weight: bold;
 	color: #000000;
