--- a/themes/stylesheet.css
+++ b/themes/stylesheet.css
@@ -54,7 +54,7 @@ img[alt="logo kt sz rgb"] {
 	position: relative; 
 	left: calc(100% - 200px);
 	/*top: -200px;*/
-	top: 200px;
+	/*top: 200px;*/
 }
 
 h2 a.link {
@@ -137,6 +137,7 @@ th {
 }
 
 .paragraph.img-logo {
-	width: 150%;
+	width: 100%;
+	left: -40px;
 	border-bottom: 2px solid #666666;
 }
