--- a/themes/stylesheet.css
+++ b/themes/stylesheet.css
@@ -33,8 +33,7 @@ a:after {
 	-webkit-transform: rotate(-45deg);
 }
 
-h1 {
-	/*, h1.sect0 a.link*/
+h1 a.link a.link {
 	font-family: 'trade gothic';
 	font-weight: bold;
 	font-size: 36pt;
@@ -53,8 +52,6 @@ h1 {
 img[alt="logo kt sz rgb"] {
 	position: relative; 
 	left: calc(100% - 200px);
-	/*top: -200px;*/
-	/*top: 200px;*/
 }
 
 h2 a.link {
