--- a/themes/stylesheet.css
+++ b/themes/stylesheet.css
@@ -33,7 +33,7 @@ a:after {
 	-webkit-transform: rotate(-45deg);
 }
 
-h1 a.link a.link {
+h1 > a {
 	font-family: 'trade gothic';
 	font-weight: bold;
 	font-size: 36pt;
@@ -68,7 +68,7 @@ h3 a.link {
 	font-size: 18pt;
 }
 
-h4 a.link{
+h4, h4 a.link{
 	font-family: 'trade gothic';
 	font-weight: bold;
 	color: #000000;
