--- a/themes/stylesheet.css
+++ b/themes/stylesheet.css
@@ -22,6 +22,8 @@ li a {
 li a:hover {
 	background-color: #D9D9D9;
 	text-indent: initial;
+	width: 100%;
+	padding: 2px;
 }
 
 a:after {
@@ -33,7 +35,7 @@ a:after {
 	-webkit-transform: rotate(-45deg);
 }
 
-h1 > a {
+h1 > a.link {
 	font-family: 'trade gothic';
 	font-weight: bold;
 	font-size: 36pt;
