header title background

--- a/themes/stylesheet.css
+++ b/themes/stylesheet.css
@@ -22,7 +22,8 @@ li a {
 li a:hover {
 	background-color: #D9D9D9;
 	text-indent: initial;
-	width: 100%;
+	display: flex;
+	flex-grow: 100;
 	padding: 2px;
 }
 
@@ -33,6 +34,10 @@ a:after {
 	padding: 3px;
 	transform: rotate(-45deg);
 	-webkit-transform: rotate(-45deg);
+}
+
+h1 {
+	background-color: plum;
 }
 
 h1 > a.link {
