--- a/themes/stylesheet.css
+++ b/themes/stylesheet.css
@@ -13,8 +13,7 @@ header {
 }
 
 ul{
-	list-style: none;
-	padding-left: 0;
+	padding-left: 0px;
 }
 
 li a {
@@ -26,7 +25,6 @@ li a {
 
 li a:hover {
 	background-color: #D9D9D9;
-	text-indent: initial;
 	display: flex;
 	flex-grow: 100;
 	padding: 2px;
@@ -46,7 +44,7 @@ h1 {
 }
 
 h1 > a {
-	text-color: blue;
+	color: blue;
 }
 
 h1 > a.link {
