--- a/themes/stylesheet.css
+++ b/themes/stylesheet.css
@@ -12,8 +12,8 @@ header {
 	height: 128px;
 }
 
-ul{
-	padding-left: 0px;
+ul.sectlevel2, ul.sectlevel3 {
+	padding: 0px;
 }
 
 li a {
@@ -43,11 +43,11 @@ h1 {
 	background-color: plum;
 }
 
-h1 > a {
+h1 a {
 	color: blue;
 }
 
-h1 > a.link {
+h1 a.link {
 	font-family: 'trade gothic';
 	font-weight: bold;
 	font-size: 36pt;
@@ -75,7 +75,7 @@ h2 a.link {
 	font-size: 24pt;
 }
 
-h3 a.link {
+h3, h3 a.link {
 	font-family: 'trade gothic';
 	font-weight: bold;
 	color: #000000;
