--- a/themes/stylesheet.css
+++ b/themes/stylesheet.css
@@ -22,6 +22,7 @@ li a {
 	font-size: 12pt;
 	color: black;
 	cursor: pointer;
+	text-indent: inherit;
 }
 
 li a:hover {
@@ -42,7 +43,6 @@ a:after {
 
 h1 {
 	background-color: plum;
-	color: black;
 }
 
 h1 a {
@@ -52,9 +52,9 @@ h1 a {
 h1 a.link {
 	font-family: 'trade gothic';
 	font-weight: bold;
-	font-size: 36pt;
+	font-size: 100pt;
 	line-height: 41pt;
-	color: #000000;
+	/*color: #000000;*/
 }
 
 .subtitle {
