--- a/themes/stylesheet.css
+++ b/themes/stylesheet.css
@@ -15,6 +15,7 @@ header {
 ul.sectlevel2, ul.sectlevel3 {
 	padding: 0px;
 	background-color: plum;
+	list-style: none;
 }
 
 li a {
@@ -22,7 +23,7 @@ li a {
 	font-size: 12pt;
 	color: black;
 	cursor: pointer;
-	text-indent: inherit;
+	/*text-indent: inherit;*/
 }
 
 li a:hover {
@@ -63,6 +64,10 @@ h1 a.link {
 	font-size: 24pt;
 	line-height: 20pt;
 	color: #000000;
+}
+
+.subtitle::after{
+	content: '<br>';
 }
 
 img[alt="logo kt sz rgb"] {
