--- a/themes/stylesheet.css
+++ b/themes/stylesheet.css
@@ -18,9 +18,10 @@ ul.sectlevel2, ul.sectlevel3 {
 	list-style: none;
 }
 
-li + a {
+#toctitle + li + a {
 	background-color: pink;
-	visibility: hidden;
+	/*visibility: hidden;*/
+	color: red;
 }
 
 li a {
@@ -29,7 +30,7 @@ li a {
 	color: black;
 	cursor: pointer;
 	margin: 0px;
-	/*text-indent: inherit;*/
+	text-indent: initial;
 }
 
 li a:hover {
@@ -62,10 +63,6 @@ h1 a.link {
 	font-size: 24pt;
 	line-height: 20pt;
 	color: #000000;
-}
-
-.subtitle::after{
-	content: '<br>';
 }
 
 img[alt="logo kt sz rgb"] {
