--- a/themes/stylesheet.css
+++ b/themes/stylesheet.css
@@ -16,6 +16,7 @@ ul.sectlevel2, ul.sectlevel3 {
 	margin-left: 0px; 
 	background-color: plum;
 	list-style: none;
+	padding-left: 0px;
 }
 
 #toctitle + li + a {
