--- a/themes/stylesheet.css
+++ b/themes/stylesheet.css
@@ -20,7 +20,7 @@ ul.sectlevel2, ul.sectlevel3 {
 	border-bottom: 1px solid #666666;
 }
 
-ul.sectlevel0 > li {
+ul.sectlevel0 > li > a {
 	visibility: hidden;
 }
 
