good point in Toc-Style

--- a/themes/stylesheet.css
+++ b/themes/stylesheet.css
@@ -12,9 +12,8 @@ header {
 	height: 128px;
 }
 
-ul.sectlevel2, ul.sectlevel3 {
+ul.sectlevel2, ul.sectlevel3, ul.sectlevel1 {
 	margin-left: 0px; 
-	background-color: plum;
 	list-style: none;
 	padding-left: 0px !important;
 	border-bottom: 1px solid #666666;
@@ -22,6 +21,7 @@ ul.sectlevel2, ul.sectlevel3 {
 
 ul.sectlevel0 > li > a {
 	visibility: hidden;
+	heigth: 0px;
 }
 
 li a {
