--- a/themes/stylesheet.css
+++ b/themes/stylesheet.css
@@ -12,7 +12,9 @@ header {
 	height: 128px;
 }
 
-ul.sectlevel2, ul.sectlevel3, ul.sectlevel1, ul.sectlevel1 li, ul.sectlevel2 li, ul.sectlevel3 li {
+/*ul.sectlevel2, ul.sectlevel3, ul.sectlevel1,*/
+ul.sectlevel1 li, ul.sectlevel2 li, ul.sectlevel3 li {
+	font-family: 'trade gothic'
 	margin-left: 0px; 
 	list-style: none;
 	padding-left: 0px !important;
