--- a/themes/stylesheet.css
+++ b/themes/stylesheet.css
@@ -17,10 +17,14 @@ summary.title {
 	font-weight: bold;
 }
 
-ul.sectlevel2, ul.sectlevel3, ul.sectlevel1, ul.sectlevel1 li, ul.sectlevel2 li, ul.sectlevel3 li {
+ul.sectlevel2, ul.sectlevel3, ul.sectlevel1 {
 	margin-left: 0px; 
 	list-style: none;
 	padding-left: 0px !important;
+	
+}
+
+ul > li {
 	border-bottom: 1px solid #666666;
 	border-top: 1px solid #666666;
 	border-collapse: collapse;
