--- a/themes/stylesheet.css
+++ b/themes/stylesheet.css
@@ -24,7 +24,7 @@ ul.sectlevel2, ul.sectlevel3, ul.sectlevel1 {
 	
 }
 
-ul > li {
+ul > a ~ li {
 	border-bottom: 1px solid #666666;
 	border-top: 1px solid #666666;
 	border-collapse: collapse;
