--- a/themes/stylesheet.css
+++ b/themes/stylesheet.css
@@ -21,14 +21,12 @@ ul.sectlevel2, ul.sectlevel3, ul.sectlevel1 {
 	margin-left: 0px; 
 	list-style: none;
 	padding-left: 0px !important;
-	border-bottom: 1px solid #bdbdbd;
-	border-collapse: collapse;
 }
 
-ul.sectlevel1 > li, ul.sectlevel2 > li, ul.sectlevel3 > li {
+/*ul.sectlevel1 > li, ul.sectlevel2 > li, ul.sectlevel3 > li {
 	border-bottom: 1px solid #bdbdbd;
 	border-collapse: collapse;
-}
+}*/
 
 ul.sectlevel0 > li > a {
 	visibility: hidden;
@@ -42,6 +40,8 @@ li a {
 	cursor: pointer;
 	margin: 0px;
 	text-indent: initial;
+	border-bottom: 1px solid #bdbdbd;
+	border-collapse: collapse;
 }
 
 li a:hover {
