final for template

--- a/themes/stylesheet.css
+++ b/themes/stylesheet.css
@@ -46,10 +46,10 @@ li a:hover {
 	margin-top: 2px;
 }
 
-#toc li /*ul.sectlevel1 li, ul.sectlevel2 li, ul.sectlevel3 li*/ {
+/*#toc li ul.sectlevel1 li, ul.sectlevel2 li, ul.sectlevel3 li {
 	border-bottom: 1px solid #bdbdbd;
 	border-collapse: collapse;
-}
+}*/
 
 h1 a.link {
 	font-family: 'trade gothic';
